fix(core): aria-hidden icon-button focus and sm menu collapse; align CT and select e2e

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -170,6 +170,8 @@ $menu-expanded-width: 16rem;
 :host(.breakpoint-sm) {
   .menu:not(.expanded) {
     width: 0;
+    min-width: 0;
+    max-width: 0;
   }
 
   .menu-overlay {
